--- a/ContalibreWebApi/Views/Shared/_Layout.cshtml
+++ b/ContalibreWebApi/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/Scripts/App/Auth/auth_angular.js")
+    @Scripts.Render("~/Scripts/App/Main/contalibre.js")
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <body ng-app="contalibre">
