--- a/ContalibreWebApi/Views/Shared/_Layout.cshtml
+++ b/ContalibreWebApi/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/Scripts/App/Helpers/contalibre_helpers.js")
     @Scripts.Render("~/Scripts/App/Auth/auth_angular.js")
     @Scripts.Render("~/Scripts/App/Main/contalibre.js")
 </head>
