--- a/ContalibreWebApi/Views/Home/Index.cshtml
+++ b/ContalibreWebApi/Views/Home/Index.cshtml
@@ -60,8 +60,8 @@
         </form>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-4"  ng-controller="contalibreContabilidadesController">
+<div class="row" ng-controller="contalibreContabilidadesController">
+    <div class="col-md-4">
         <div ng-if="isLoggedIn">
             <h2>Contabilidades del usuario</h2>
             <table>
@@ -80,6 +80,7 @@
                         <td>{{row.Year}}</td>
                         <td>{{row.UserName}}</td>
                         <td><a ng-click="deleteEntity(row.Id)" href="">Delete</a></p></td>
+                        <td><a ng-click="startEntityModification(row)" href="">Modify</a></p></td>
                     </tr>
                 </tbody>
             </table>
@@ -94,7 +95,26 @@
                     <input ng-required="required" class="form-control" type="number" ng-model="data.newEntity.Year" name="contabilidadYear" id="contabilidadYear" />
                     <p>{{contabilidadForm.contabilidadYear.$valid}}</p>
                 </div>
-                <input type="submit" value="Submit" ng-click="createEntity()"/>
+                <input type="submit" value="Submit" ng-click="createEntity()" />
+            </form>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div ng-if="isLoggedIn && editMode">
+            <h2>Editar contabilidad</h2>
+            <form name="modifyContabilidadForm">
+                <p>Id: {{data.modifyingEntity.Id}}</p>
+                <div class="form-group">
+                    <label for="contabilidadCompany">Company</label>
+                    <input ng-required="required" ng-minlength="3" class="form-control" type="text" ng-model="data.modifyingEntity.CompanyName" name="contabilidadCompany" id="contabilidadCompany" />
+                    <p>{{modifyContabilidadForm.contabilidadCompany.$valid}}</p>
+                </div>
+                <div class="form-group">
+                    <label for="contabilidadYear">Year</label>
+                    <input ng-required="required" class="form-control" type="number" ng-model="data.modifyingEntity.Year" name="contabilidadYear" id="contabilidadYear" />
+                    <p>{{modifyContabilidadForm.contabilidadYear.$valid}}</p>
+                </div>
+                <input type="submit" value="Submit" ng-click="modifyEntity()" />
             </form>
         </div>
     </div>
